--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -205,51 +205,76 @@
             <div class = "main-info">
                 <div class = "text-info">
                     <h3>Imię</h3>
-                    <span x-text = "current_order.name"></span>
+                    <span x-show = "editing == false" x-text = "current_order.name"></span>
+                    <input x-show = "editing == true" type = "text" x-model = "current_order.name">
                 </div>
                 <div class = "text-info">
                     <h3>Nazwisko</h3>
-                    <span x-text = "current_order.surname"></span>
+                    <span x-show = "editing == false" x-text = "current_order.surname"></span>
+                    <input x-show = "editing == true" type = "text" x-model = "current_order.surname">
                 </div>
                 <div class = "text-info">
                     <h3>Dostawa</h3>
-                    <span x-text = "current_order.delivery === 'dostawa' ? current_order.address : current_order.delivery"></span>
+                    <span x-show = "editing == false" x-text = "current_order.delivery === 'dostawa' ? current_order.address : current_order.delivery"></span>
+                    <select x-show = "editing == true" name="delivery" x-model = "current_order.delivery">
+                        <option value="kartuzy">Kartuzy</option>
+                        <option value="somonino">Somonino</option>
+                        <option value="dostawa">Dostawa</option>
+                    </select>
+                </div>
+                <div class = "text-info" x-show = "editing == true&&current_order.delivery ==='dostawa'">
+                    <h3>Miejsce dostawy</h3>
+                    <input type = "text" x-model = "current_order.address">
                 </div>
                 <div class = "text-info">
                     <h3>Numer kontaktowy</h3>
-                    <span x-text = "current_order.phone"></span>
+                    <span x-show = "editing == false" x-text = "current_order.phone"></span>
+                    <input x-show = "editing == true" type = "text" x-model = "current_order.phone">
                 </div>
                 <div class = "text-info">
                     <h3>Do zapłaty</h3>
-                    <span x-text = "current_order.price"></span>
+                    <span x-show = "editing ==false" x-text = "current_order.price"></span>
+                    <input x-show = "editing == true" type = "text" x-model = "current_order.prince">
                 </div>
                 <div class = "text-info">
                     <h3>Data odbioru</h3>
-                    <span x-text = "current_order.date"></span>
+                    <span x-show = "editing == false" x-text= "current_order.date"></span>
+                    <input type = "date" x-show = "editing == true" x-model = "current_order.date">
                 </div>
                 <div class = "text-info">
                     <h3>Status</h3>
-                    <span x-text = "current_order.status"></span>
+                    <span x-show = "editing == false" x-text = "current_order.status"></span>
+                    <select x-show = "editing == true" x-model="current_order.status">
+                        <option value = "zamówione" >Zamówione</option>
+                        <option value = "w trakcie" >W trakcie</option>
+                        <option value = "gotowe" >Gotowe</option>
+                        <option value = "odebrane" >Odebrane</option>
+                    </select>
                 </div>
                 <div class = "text-info">
                     <h3>Dodatkowe informacje</h3>
-                    <span x-text = "current_order.additional_info"></span>
+                    <span x-show = "editing == false" x-text = "current_order.additional_info"></span>
+                    <textarea x-show = "editing == true" x-model = "current_order.additional_info"></textarea>
                 </div>
             </div>
             <div class = "order-contents" x-show = "current_order.cakes != null">
                 <template x-for="item in current_order.cakes">
                     <div class = "cake-info">
                         <h3 x-text = "item.name"></h3>
-                        <span>
+                        <div x-show = "editing == true">-1</div>
+                        <div x-show = "editing == true">-0.5</div>
+                        <div>
                             <span x-text = "item.quantity"></span>
                             <span>szt.</span>
-                        </span>
+                        </div>
+                        <div x-show = "editing == true">+0.5</div>
+                        <div x-show = "editing == true">+1</div>
                     </div>
                 </template>
             </div>
         </main>
         <footer>
-            <a class = "nav-button"  x-on:click.prevent = "edit_order(current_order)"><box-icon name='edit'></box-icon></a>
+            <a class = "nav-button"  x-on:click.prevent = "editing = !editing"><box-icon name='edit'></box-icon></a>
             <a class = "nav-button" x-on:click.prevent = "delete_order(current_order)"><box-icon name='trash' ></box-icon></a>
         </footer>
     </div>
